--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
 	      <div class='icon'>
 	        <img alt="" src='img/user_icon_copy.png'>
 	      </div>
-	      <input name="login" placeholder='用户名' maxlength="16" type='text' autocomplete="off" value="kbcxy"/>
+	      <input name="login" placeholder='用户名' maxlength="16" type='text' autocomplete="off"/>
 	        <div class='validation'>
 	          <img alt="" src='img/tick.png'>
 	        </div>
@@ -81,7 +81,7 @@
     <script src="js/jquery.mockjax.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		var canGetCookie = 0;//是否支持存储Cookie 0 不支持 1 支持
-		var ajaxmockjax = 1;//是否启用虚拟Ajax的请求响 0 不启用  1 启用
+		var ajaxmockjax = 0;//是否启用虚拟Ajax的请求响 0 不启用  1 启用
 		//默认账号密码
 		
 		var truelogin = "kbcxy";
@@ -143,8 +143,8 @@
 	    });
 	    var open = 0;
 	    layui.use('layer', function () {
-			var msgalert = '默认账号:' + truelogin + '<br/> 默认密码:' + truepwd;
-    		var index = layer.alert(msgalert, { icon: 6, time: 4000, offset: 't', closeBtn: 0, title: '友情提示', btn: [], anim: 2, shade: 0 });  
+			var msgalert = "请输入账号密码"
+    		var index = layer.alert(msgalert, { icon: 6, time: 4000, offset: 't', closeBtn: 0, title: '友情提示', btn: [], anim: 2, shade: 0 });
 			layer.style(index, {
 				color: '#777'
 			}); 
@@ -179,22 +179,15 @@
 	                }, 500);
 
 	                //登陆
-	                var JsonData = { login: login, pwd: pwd, code: code };
+	                var JsonData = { loginUserNo: login, password: pwd, code: code };
 					//此处做为ajax内部判断
-                    var url = "";
-					if(JsonData.login == truelogin && JsonData.pwd == truepwd && JsonData.code.toUpperCase() == CodeVal.toUpperCase()){
-						url = "Ajax/Login";
-					}else{
-						url = "Ajax/LoginFalse";
-					}
-					
-					
+                    var url = "../../user/getUserDetailed";
 	                AjaxPost(url, JsonData,
 	                                function () {
 	                                    //ajax加载中
 	                                },
 	                                function (data) {
-	                                    //ajax返回 
+	                                    //ajax返回
 	                                    //认证完成
 	                                    setTimeout(function () {
 	                                        $('.authent').show().animate({ right: 90 }, {
@@ -209,9 +202,10 @@
 	                                        $('.login').removeClass('testtwo'); //平移特效
 	                                    }, 2000);
 	                                    setTimeout(function () {
-	                                        $('.authent').hide();
+                                            console.log(JSON.stringify(data))
+                                            $('.authent').hide();
 	                                        $('.login').removeClass('test');
-	                                        if (data.Status == 'ok') {
+	                                        if (data.data == 'ok') {
 	                                            //登录成功
 	                                            $('.login div').fadeOut(100);
 	                                            $('.success').fadeIn(1000);
@@ -219,7 +213,7 @@
 												//跳转操作
 												location.href = "http://www.baidu.com";
 	                                        } else {
-	                                            AjaxErro(data);
+	                                            location.href = "../error/index.html"
 	                                        }
 	                                    }, 2400);
 	                                })
