--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -11,13 +11,14 @@
     <meta http-equiv="cache-control" content="no-cache">
     <meta http-equiv="expires" content="0"> 
 	<title>登录界面</title>
-    <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/default.css}" rel="stylesheet" type="text/css" />
 	<!--必要样式-->
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
-    <link href="css/demo.css" rel="stylesheet" type="text/css" />
-    <link href="css/loaders.css" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/demo.css}" rel="stylesheet" type="text/css" />
+    <link th:href="@{/css/loaders.css}" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <span id="pathVal" value="${#httpServletRequest.getScheme() + '://' + #httpServletRequest.getServerName() + ':' + #request.getServerPort()  + #request.getContextPath()} ">点我啊！</span>
 	<div class='login'>
 	  <div class='login_title'>
 	    <span>管理员登录</span>
@@ -45,7 +46,7 @@
 	      <div class='icon'>
 	        <img alt="" src='img/key.png'>
 	      </div>
-	      <input name="code" placeholder='验证码' maxlength="4" type='text' name="ValidateNum" autocomplete="off">
+	      <input name="code" placeholder='验证码' maxlength="4" type='text' autocomplete="off">
 	      <div class='validation' style="opacity: 1; right: -5px;top: -3px;">
           <canvas class="J_codeimg" id="myCanvas" onclick="Code();">对不起，您的浏览器不支持canvas，请下载chrome最新版浏览器!</canvas>
 	      </div>
@@ -73,13 +74,14 @@
 	<div class="OverWindows"></div>
     <link href="layui/css/layui.css" rel="stylesheet" type="text/css" />
 	<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-	<script type="text/javascript" src='js/stopExecutionOnTimeout.js?t=1'></script>
-    <script src="layui/layui.js" type="text/javascript"></script>
-    <script src="js/Particleground.js" type="text/javascript"></script>
-    <script src="Js/Treatment.js" type="text/javascript"></script>
-    <script src="js/jquery.mockjax.js" type="text/javascript"></script>
-	<script type="text/javascript">
+	<script type="text/javascript" th:src="@{/js/jquery-ui.min.js}"></script>
+	<script type="text/javascript" th:src='@{/js/stopExecutionOnTimeout.js?t=1}'></script>
+    <script th:src="@{/layui/layui.js}" type="text/javascript"></script>
+    <script th:src="@{/js/Particleground.js}" type="text/javascript"></script>
+    <script th:src="@{/js/Treatment.js}" type="text/javascript"></script>
+    <script th:src="@{/js/jquery.mockjax.js}" type="text/javascript"></script>
+ 	<script type="text/javascript">
+		alert($("#pathVal").val())
 		var canGetCookie = 0;//是否支持存储Cookie 0 不支持 1 支持
 		var ajaxmockjax = 0;//是否启用虚拟Ajax的请求响 0 不启用  1 启用
 		//默认账号密码
@@ -159,7 +161,10 @@
 	                ErroAlert('请输入密码');
 	            } else if (code == '' || code.length != 4) {
 	                ErroAlert('输入验证码');
-	            } else {
+	            }else if(!(code.toUpperCase() == CodeVal.toUpperCase())){
+                    ErroAlert('验证码有误!');
+                    Code();
+                } else {
 	                //认证中..
 	                fullscreen();
 	                $('.login').addClass('test'); //倾斜特效
@@ -181,7 +186,7 @@
 	                //登陆
 	                var JsonData = { loginUserNo: login, password: pwd, code: code };
 					//此处做为ajax内部判断
-                    var url = "../../user/getUserDetailed";
+                    var url = "user/getUserDetailed";
 	                AjaxPost(url, JsonData,
 	                                function () {
 	                                    //ajax加载中
@@ -231,7 +236,9 @@
 	        } else {
 	            //浏览器不支持全屏API或已被禁用  
 	        }
-	    }  
+	    }
+
+
 		if(ajaxmockjax == 1){
 			$.mockjax({  
 				url: 'Ajax/Login',  
